--- a/.dockerignore
+++ b/.dockerignore
@@ -1,3 +1,5 @@
+.git
+
 # compiled output
 /dist
 /node_modules
@@ -33,8 +35,4 @@ lerna-debug.log*
 !.vscode/launch.json
 !.vscode/extensions.json
 
-debug.log
-
 .vscode
-
-production.env
