--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 # DB CONFIG
 
+DB_VERSION=latest
 DB_ROOT_PASSWORD=youzizi1
 DB_HOST=mysql
 DB_PORT=3306
@@ -8,3 +9,8 @@ DB_PASSWORD=youzizi1
 DB_DATABASE=gist
 DB_SYNCHRONIZE=true
 DB_LOGGING=false
+
+# NODE CONFIG
+
+NODE_VERSION=12.8.0
+
