--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,29 @@
-version: '3.7'
+version: '3'
 
 services:
-  nest:
-    build: .
-    ports:
-      - 3000:3000
+  cli:
+    image: nest/cli
+    working_dir: /workspace
+    volumes:
+      - .app:/workspace
+    tty: true
   mysql:
-    image: mysql:5.7
-    command: --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
+    image: mysql:${DB_VERSION}
+    command: mysqld --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
     restart: always
     ports:
-      - 3306:3306
+      - ${DB_PORT}:3306
     environment:
       MYSQL_ROOT_PASSWORD: ${DB_ROOT_PASSWORD}
       MYSQL_DATABASE: ${DB_DATABASE}
       MYSQL_USER: ${DB_USERNAME}
       MYSQL_PASSWORD: ${DB_PASSWORD}
+    volumes:
+      - ./db:/var/lib/mysql
+  nest:
+    image: node:12.8.0
+    working_dir: /home/app
+    ports:
+      - 3000:3000
+    depends_on:
+      - mysql
