--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   cli:
-    image: nest/cli
+    image: nestjs/cli
     working_dir: /workspace
     volumes:
       - .app:/workspace
